# Reversi-Server

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: sonarcloud.yml
src/: globals.h  main.c
src/map/: map.c  map.h  map_loader.c  map_loader.h  map_util.c  map_util.h
src/network/: server.c  server.h
